--- a/www/plugin/leaflet/leaflet.css
+++ b/www/plugin/leaflet/leaflet.css
@@ -404,7 +404,7 @@
 	        border-radius: 12px;
 	}
 .leaflet-popup-content {
-	margin: 13px 19px;
+	margin: 17px 5px 5px 5px;
 	line-height: 1.4;
 	}
 .leaflet-popup-content p {
