--- a/www/plugin/toolbar/toolbar.css
+++ b/www/plugin/toolbar/toolbar.css
@@ -5,3 +5,37 @@
 	font-weight: bold;
 	font-size: 10px;
 }
+
+.inline-toolbar{
+	width: 20px !important;
+	/*line-height: 25px !important;*/
+	height: 20px !important;
+}
+
+.inline-bar{
+	height: 20px;
+}
+
+.inline-bar img{
+	width: 20px;
+	display: block;
+}
+
+.inline-bar a, .inline-bar a:hover{
+	display: inline-block !important;
+	padding: 2px;
+}
+
+.inline-bar a:first-child {
+	-webkit-border-top-left-radius: 4px;
+	        border-top-left-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	        border-bottom-left-radius: 4px;
+	}
+.inline-bar a:last-child {
+	-webkit-border-top-right-radius: 4px;
+	        border-top-right-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
+	        border-bottom-right-radius: 4px;
+	border-bottom: none;
+}
