--- a/www/plugin/toolbar/toolbar.css
+++ b/www/plugin/toolbar/toolbar.css
@@ -13,7 +13,9 @@
 }
 
 .inline-bar{
-	height: 20px;
+	height: 50px;
+	width: 170px;
+	line-height: 0px;
 }
 
 .inline-bar img{
@@ -29,13 +31,18 @@
 .inline-bar a:first-child {
 	-webkit-border-top-left-radius: 4px;
 	        border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 0px;
+	        border-top-right-radius: 0px;
 	-webkit-border-bottom-left-radius: 4px;
 	        border-bottom-left-radius: 4px;
-	}
+}
+
 .inline-bar a:last-child {
 	-webkit-border-top-right-radius: 4px;
 	        border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	        border-bottom-right-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	        border-bottom-left-radius: 4px;
 	border-bottom: none;
 }
